--- a/lib/dedalo/component_radio_button/html/component_radio_button_list.phtml
+++ b/lib/dedalo/component_radio_button/html/component_radio_button_list.phtml
@@ -43,11 +43,10 @@
 		case ($permissions>=2) :					
 
 				$html_contenido .= "<ul>";
-				foreach ($ar_list_of_values->result as $value => $rotulo) {
+				foreach ($ar_list_of_values->result as $key => $item) {
 
-					$value   = (string)$value; 
-					$locator = (object)json_handler::decode($value);	# Locator is json encoded object
-					#dump($locator," locator"); #dump($dato," dato");
+					$label   = (string)$item->label;
+					$locator = (object)$item->value;
 
 					if (!property_exists($locator, 'type')) {
 						$locator->type = DEDALO_RELATION_TYPE_LINK;
@@ -56,7 +55,7 @@
 						$locator->from_component_tipo = $tipo;
 					}
 
-					$locator_string = json_encode($locator);
+					$locator_json = json_encode($locator);
 
 					if (in_array($locator, $dato)) {	# dato is array always
 						$checked = 'checked="checked"';
@@ -73,9 +72,9 @@
 						$html_contenido .= "data-lang=\"{$lang}\" ";
 						$html_contenido .= "data-section_tipo=\"{$section_tipo}\" ";
 						$html_contenido .= "data-parent=\"{$parent}\" ";
-						$html_contenido .= "value='$locator_string' ";
+						$html_contenido .= "value='{$locator_json}' ";
 						$html_contenido .= "title=\"$html_title\" $checked />";
-						$html_contenido .= " <label class=\"css_radio_button_rotulo\" $required_code >$rotulo</label>";
+						$html_contenido .= " <label class=\"css_radio_button_rotulo\" $required_code >$label</label>";
 
 						if ($rotulo!=end($ar_list_of_values->result)) {
 							#$html_contenido .= "<br>";
