Minor code changes and clean

--- a/lib/dedalo/section_records/html/section_records_list.phtml
+++ b/lib/dedalo/section_records/html/section_records_list.phtml
@@ -98,11 +98,11 @@
 	
 					// search_query_object json ecoded for debug
 					$search_options = $this->search_options->search_query_object;
-					$search_options = json_encode($search_options, JSON_PRETTY_PRINT);
+					$search_options = json_encode($search_options, JSON_PRETTY_PRINT | JSON_UNESCAPED_UNICODE);
 					$html_info .= "<br><pre style=\"display:none\">$search_options</pre>";
 
 					// search_query_object_preparse for debug
-					$html_info .= '<br><pre style="display:none">'.json_encode($this->search_query_object_preparse, JSON_PRETTY_PRINT).'</pre>';
+					$html_info .= '<br><pre style="display:none">'.json_encode($this->search_query_object_preparse, JSON_PRETTY_PRINT | JSON_UNESCAPED_UNICODE).'</pre>';
 
 					$html_info .='</div>';
 					#echo "<div> Time To Generate section list: HTML: ".round(microtime(1)-$start_time,3)."</div>";
