--- a/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
+++ b/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
@@ -46,3 +46,12 @@
 		padding: 0;
 	}
 	
+
+	// autocomplete_list_button_options
+		.autocomplete_list_button_options {
+			opacity: .3;
+			background-position: -432px 0;
+			zoom: 120%;
+			-moz-transform: scale(1.20);
+			transform-origin: bottom;			
+		}
