Minor css changes

--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -331,7 +331,7 @@ div.dato_refecence_default_lang {
 	width: 10% !important;
 	min-width: initial;
 	min-width: 30px;
-	height: 2em;
+	//height: 2em;
 	margin-right: 5px;	
 	text-align: center;
 	//vertical-align: middle;	
