--- a/lib/dedalo/tools/tool_indexation/css/tool_indexation.less
+++ b/lib/dedalo/tools/tool_indexation/css/tool_indexation.less
@@ -84,6 +84,7 @@
 		border: none;
 		//background-color: #6ED03E
 		display: none;
+		position: absolute;
 		}
 
 
@@ -103,6 +104,7 @@
 		margin: 0;
 		overflow: hidden;
 		border: none;
+		position: absolute;
 	}
 
 /* TEXT (COMPONENT TEXT AREA) */
