--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -9,14 +9,9 @@
 .css_wrap_autocomplete_hi {
 	//background-color: #B5E1FF
 	}
-	.css_wrap_autocomplete_hi .content_data {
-			
+	.css_wrap_autocomplete_hi .content_data {			
 	}
-
-	.css_wrap_autocomplete_hi .comparison_operator {
-		float: left;
-	}
-
+	
 	// Search mode
 	.wrap_autocomplete_hi_search {
 
@@ -26,77 +21,33 @@
 		}
 
 
-/* VALOR TEXT */
-.css_autocomplete_hi_valor {
-	display: inline-block;	
-	color: #1a1a1a;
-	padding: 3px;
-	padding-left: 0px;
-	padding-right: 5px;
-}
-
-
-
-/* AUTOCOMPLETE SEARCH FIELD 
------------------------------------------ 
-input.css_autocomplete_hi_search_field {
-	float: right;
-	width: 100px;
-	//opacity: 0.5;
-	background: white url('../../themes/default/lupa2.svg') right center no-repeat;
-	background-size: auto 100%;
-	background-position-x: 75%;
-	transition: all 0.2s ease-in-out;
-	}
-	input.css_autocomplete_hi_search_field:hover {
-		opacity: 1;
-	}
-	input.css_autocomplete_hi_search_field:focus {
-		opacity: 1;
-		//width: 120px;
-		background-position-x: 95%;
-	}
-
-	// Search variant
-	----------------------------------------- 
-	input.css_autocomplete_hi_search_field.in_search_mode,
-	.new_autocomplete_hi.in_search_mode {
-		float: left;
-		margin-right: 10px;
-		width: initial !important;
-	}
-	div.toponymy_list_button_options.in_search_mode {
-		position: relative;
-		float: left;
-		top: 1px;
-		zoom: 145%;
-		margin-right: 5px;
-	}
-	ul.css_autocomplete_hi_valor.in_search_mode {
-		padding-top: 5px;
-	}
-*/
-
-
-
-/* DATO HIDDEN INPUT 
------------------------------------------ */
-input.css_autocomplete_hi_dato_hidden {
-	display: none;
-	width: 100%;
-	margin-top: 10px;
-	background-color: #ccf0fb;
-	}
-	input.css_autocomplete_hi_dato_hidden.debug {
-		display: inline-block;
-		width: 90px;
-		margin-top: 2px;
-		clear: both;
+// valor text
+	.css_autocomplete_hi_valor {
+		display: inline-block;	
+		color: #1a1a1a;
+		padding: 3px;
+		padding-left: 0px;
+		padding-right: 5px;
 	}
 
 
-/* BTN DELETE 
------------------------------------------ */
+
+// dato hidden input 
+	input.css_autocomplete_hi_dato_hidden {
+		display: none;
+		width: 100%;
+		margin-top: 10px;
+		background-color: #ccf0fb;
+		}
+		input.css_autocomplete_hi_dato_hidden.debug {
+			display: inline-block;
+			width: 90px;
+			margin-top: 2px;
+			clear: both;
+		}
+
+
+// btn delete 
 	.css_autocomplete_hi_button_delete {
 		position: relative;
 		top: 0px;
@@ -106,7 +57,7 @@ input.css_autocomplete_hi_dato_hidden {
 	}
 
 
-
+// btn tree
 	.css_autocomplete_hi_tree_stats {
 		display: inline-block;	
 		color: #1a1a1a;
@@ -119,10 +70,29 @@ input.css_autocomplete_hi_dato_hidden {
 	}
 
 
-	//.wrap_portal_list{
-	//	padding: 1px;
-	//}
+// button close
+ 	/*
+	.css_autocomplete_hi_button_close {
+		display: inline-block;
+		width: 16px;
+		height: 16px;
+		background-size: cover;
+		float: right;
+		background: url('../../themes/default/close.svg') center center no-repeat;
+		//filter: hue-rotate(30deg) saturate(.5) brightness(0%) saturate(4)
+		-webkit-filter: brightness(0%);
+		filter: brightness(0%);
+		 opacity: 0.4;
+		}
+		.css_autocomplete_hi_button_close:hover {
+			-webkit-filter: brightness(100%);
+			filter:brightness(100%); 
+			cursor: pointer;
+			opacity: 0.8;
+		}*/
 
+
+// component into portal list
 	.css_autocomplete_hi_ul_edit_in_portal {
 		display: inline-block;
 		width: 16px;
@@ -147,149 +117,36 @@ input.css_autocomplete_hi_dato_hidden {
 		}
 	
 
-	.css_autocomplete_hi_button_close {
-		display: inline-block;
-		width: 16px;
-		height: 16px;
-		background-size: cover;
-		float: right;
-		background: url('../../themes/default/close.svg') center center no-repeat;
-		//filter: hue-rotate(30deg) saturate(.5) brightness(0%) saturate(4)
-		-webkit-filter: brightness(0%);
-		filter: brightness(0%);
-		 opacity: 0.4;
-		}
-		.css_autocomplete_hi_button_close:hover {
-			-webkit-filter: brightness(100%);
-			filter:brightness(100%); 
-			cursor: pointer;
-			opacity: 0.8;
-		}
-
-
-.css_wrap_autocomplete_hi.wrap_portal_list > .content_data {
-	width: 100%;
-
-}
-
-.css_wrap_autocomplete_hi.wrap_portal_list >.content_data >.css_autocomplete_hi_valor{
-	width: 80%;
-	min-height: 22px;
-}
-
-/* Search mode variant
--------------------------------------------*/
-.css_autocomplete_hi_valor.in_search_mode {
-	width: 100%;
-	padding-top: 10px;
-}
-
-
-.css_wrap_autocomplete_hi.wrap_portal_list >.content_data >.css_autocomplete_hi_search_field{
-	width: 100%;
-	background-position-x: 90%;
-}
-.css_wrap_autocomplete_hi.wrap_portal_list >.content_data > input.css_autocomplete_hi_search_field:focus {
-
-	background-position-x: 98%;
-}
-
-
-/* NEW_AUTOCOMPLETE BTN NEW 
-----------------------------------------*/
-.new_autocomplete_hi {
-	float: right;	
-	position: relative;
-	background-position: 0 -96px;
-	opacity: 0.4;
-	width: 14px;
-	zoom: 1.25;
-}
 
 
 
-/* TOPONYMY_LIST
-----------------------------------------*/
-@column_width : 33%;
-.toponymy_list {
-	display: none;
-	background-color: #8E8E8E;
-	padding: 10px;	
-	z-index: 1001;
-	white-space: nowrap;
-	color: #ffffff !important;
-	width: 100%;
-	top: 5px;
-    position: relative;
-	margin-bottom: 5px;
-	}
-	.toponymy_list li {
-		//display: table;
-		float: left;
-		width: @column_width;
-		white-space: nowrap;
-		overflow: hidden;
-		display: flex; // Important for text-overflow ellipsis
-	}	
-	.toponymy_list input {
-		margin: 2px;
-		margin-right: 4px;
-	}
-	.toponymy_list label {
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		max-width: 90%;
-	}
-	.toponymy_list  hr {
+// Search mode variant
+	.css_autocomplete_hi_valor.in_search_mode {
 		width: 100%;
-		display: -webkit-inline-box;
-		margin: 3px;
-		padding: 0;
-		float: left;
-		}
-	/*
-	.toponymy_list .toponymy_list_close {
-		float: right;
-		background-color: #a0a0a0;
-		padding: 3px;
-		width: 24px;
-		text-align: center;
-		border-radius: 4px;
+		padding-top: 10px;
+	}
+
+
+
+
+
+// new_autocomplete btn new 
+	.new_autocomplete_hi {
+		float: right;	
 		position: relative;
-		right: 0px;
-		cursor: pointer;
-		font-weight: bold;
-		}
-		.toponymy_list .toponymy_list_close:active {
-			color: black;
-		}*/
-
-	.toponymy_list_button_options {
-		float: right;
-		position: relative;
-		top: -16px;
-		right: 5px;
-		opacity: .3;
-		background-position: -432px 0;
-		right: 0;
-		position: absolute;	
-		zoom: 1.15;
-	}
-	.toponymy_list_button_options.in_search_mode {
-		top: 5px;
+		background-position: 0 -96px;
+		opacity: 0.4;
+		width: 14px;
+		zoom: 1.25;
 	}
 
-	.toponymy_list mark {
-		color: #f5c39f !important;
-	}
 
+
+// grid images
 	.grid_item_selected_label {
 		padding: 4px;
 		text-align: right;
 	}
-
-	// grid_images_container
 	.grid_images_container {
 		background-color: #ffffff;
 		display: table;
@@ -319,23 +176,62 @@ input.css_autocomplete_hi_dato_hidden {
 
 
 // component_autocomplete_hi showed in reference info dialog box
-#div_reference_wrapper .css_wrap_component_autocomplete_hi {
-	padding-left: 10px;
-    padding-right: 11px;
-}
-
-
-
-/* AUTOCOMPLETE
----------------------------------------- 
-	.css_wrap_autocomplete_hi .autocomplete_wrapper {
-		float: right;
-		position: relative;
-		//top: 22px;
+	#div_reference_wrapper .css_wrap_component_autocomplete_hi {
+		padding-left: 10px;
+	    padding-right: 11px;
 	}
-	.css_wrap_autocomplete_hi.wrap_autocomplete_hi_search .autocomplete_wrapper {
-		float: left;
-		margin-right: 5px;
+
+
+// in_search_mode
+	.css_wrap_component_autocomplete_hi .autosearch_options.in_search_mode {
+		display: table;
+		position: initial;
+		width: 100%;
+    	height: initial;
+    	background-color: transparent;
+    	border: none;
+    	margin: 0;
 	}
-	*/
+	.css_wrap_component_autocomplete_hi .autosearch_options.in_search_mode .search_sections_list {
+		top: 0;
+		margin: 0;
+	}
+
+
+
+// buttons_and_fields
+	.css_wrap_component_autocomplete_hi .buttons_and_fields {		
+		align-items: center;
+		justify-content: flex-end;		
+		position: absolute;	
+		right: 0;
+		top: -23px;
+		//background-color: @color_selected_wrap;
+		padding-left: 2px;
+		padding-right: 2px + 3px;
+		padding-top: 2px;
+		border-top-left-radius: 3px;
+		border-top-right-radius: 3px;
+		display: none;
+		}
+		// In search mode
+			.css_wrap_component_autocomplete_hi.wrap_component_search .buttons_and_fields {
+				display: block;
+				background-color: transparent;
+				top: 0.4em;
+				right: -0.6em;
+			}
+
+
+// component showed into portal list
+	.column.component_autocomplete > .css_wrap_autocomplete > .content_data {
+		width: 100%;
+	}
+	.column.component_autocomplete > .css_wrap_autocomplete > .content_data > .css_autocomplete_hi_valor {
+		width: 80%;
+		min-height: 22px;
+	}
+
+	
+
 
