--- a/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
+++ b/lib/dedalo/services/service_autocomplete/css/service_autocomplete.less
@@ -7,51 +7,120 @@
 
 
 
-/* INPUT
-------------------------------------------------------- */
-.autocomplete_wrapper {
-	
-	width: 100%;
-	z-index: 10;
-	padding: 4px;
-	padding-bottom: 10px;
-    padding-left: 5px;
-	left: 0px;
-	}
-	.autocomplete_wrapper input.autocomplete_input {
-		//background-color: #C8F54D;
-		//float: right;
+// autocomplete_wrapper
+	.autocomplete_wrapper {
 		width: 100%;
-		background: #fff url("../../../themes/default/lupa2.svg") right center no-repeat;
-		background-size: auto 100%;
-		//background-position-x: 95%;
-		background-position: bottom -1px right 5px;
-		//transition: all .2s ease-in-out;		
-		//opacity: 0.5;
-	}
-	.autocomplete_wrapper input.autocomplete_input:focus {
-		opacity: 1;
-		//width: 150px;
-		//background-position-x: 95%;
-	}
-	// Search mode
-	.autocomplete_wrapper.in_search_mode {
-		position: absolute;
-	    top: 0;
-	    left: 40px;
-	    padding: 0;
-	    width: 80%;
-	}
-	.autocomplete_wrapper_edit_list {
-		padding: 0;
-	}
+		z-index: 10;
+		padding: 4px;
+		padding-bottom: 10px;
+	    padding-left: 5px;
+		left: 0px;
+		}
+		.autocomplete_wrapper input.autocomplete_input {
+			//background-color: #C8F54D;
+			//float: right;
+			width: 100%;
+			background: #fff url("../../../themes/default/lupa2.svg") right center no-repeat;
+			background-size: auto 100%;
+			//background-position-x: 95%;
+			background-position: bottom -1px right 5px;
+			//transition: all .2s ease-in-out;		
+			//opacity: 0.5;
+		}
+		.autocomplete_wrapper input.autocomplete_input:focus {
+			opacity: 1;
+			//width: 150px;
+			//background-position-x: 95%;
+		}
+		// Search mode
+		.autocomplete_wrapper.in_search_mode {
+			position: absolute;
+		    top: 0;
+		    left: 40px;
+		    padding: 0;
+		    width: 80%;
+		}
+		.autocomplete_wrapper_edit_list {
+			padding: 0;
+		}
 	
 
-	// autocomplete_list_button_options
-		.autocomplete_list_button_options {
-			opacity: .3;
-			background-position: -432px 0;
-			zoom: 120%;
-			-moz-transform: scale(1.20);
-			transform-origin: bottom;			
+// autocomplete_list_button_options
+	.autocomplete_list_button_options {
+		opacity: .3;
+		background-position: -432px 0;
+		zoom: 120%;
+		-moz-transform: scale(1.20);
+		transform-origin: bottom;
+	}
+
+// autosearch_options
+	.autosearch_options {
+		//background-color: #DFFE79;
+		//display: none;
+		//padding: 5px;
+		//padding-right: 0; //100px;
+		//background-color: #8e8e8e;
+		color: #9e9e9e;
+		border-bottom: 0.5px solid #ccc;
+		//border-radius: 4px;
+		//margin-top: 0; //10px;
+		//margin-bottom: 5px;
+		clear: both;
+		//background-color: #cdcdcd;
+		background-color: darken(@color_selected_wrap, 5%);			
 		}
+	.autosearch_options.in_search_mode {
+		padding-right: 5px;
+		//padding-left: 150px;
+		}
+
+
+
+// search_sections_list
+	@column_width : 33%;
+	.search_sections_list {
+		display: table;
+		background-color: #8E8E8E;
+		padding: 10px;	
+		z-index: 1001;
+		white-space: nowrap;
+		color: #ffffff !important;
+		width: 100%;
+		top: 5px;
+	    position: relative;
+		margin-bottom: 5px;
+		}
+		.search_sections_list li {
+			//display: table;
+			float: left;
+			width: @column_width;
+			white-space: nowrap;
+			overflow: hidden;
+			display: flex; // Important for text-overflow ellipsis
+		}	
+		.search_sections_list input {
+			margin: 2px;
+			margin-right: 4px;
+		}
+		.search_sections_list label {
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			max-width: 90%;
+		}
+		.search_sections_list  hr {
+			width: 100%;
+			display: -webkit-inline-box;
+			margin: 3px;
+			padding: 0;
+			float: left;
+			}
+		.search_sections_list mark {
+			color: #f5c39f !important;
+		}
+
+
+
+
+
