--- a/lib/dedalo/component_relation_children/html/component_relation_children_edit.phtml
+++ b/lib/dedalo/component_relation_children/html/component_relation_children_edit.phtml
@@ -13,9 +13,14 @@
 	print "data-modo=\"{$modo}\" ";
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-component_info='{$component_info}' ";
+	
 	print "data-hierarchy_sections='".json_encode($hierarchy_sections)."' ";  // Default hierarchy_sections
 	print "data-relation_type=\"{$relation_type}\" ";
 	print "data-search_tipos='".json_encode($search_tipos)."' ";
+
+	// service autocomplete options
+	print "data-search_sections='". json_encode($search_sections)."' ";
+	
 	print 'data-search_query_object=\''.$json_search_query_object.'\' ';
 	print "data-limit=\"$limit\" ";
 	print ">";
@@ -85,10 +90,7 @@
 						if(SHOW_DEBUG===true) {
 							#$html_content .= "<div class=\"debug_info notes\">ar_referenced_tipo: ".implode(', ', $ar_referenced_tipo)."</div>";
 							#$html_content .= "<div class=\"debug_info notes\">".str_replace('},', '},<br>', $dato_json) ."</div>";
-						}	
-
-						# Reset var 'activated' on load
-						#$html_content .= "<script>component_autocomplete_hi.activated={}</script>";
+						}
 						break;
 				}//end switch ($source_mode)
 				
