--- a/lib/dedalo/component_relation_children/html/component_relation_children_search.phtml
+++ b/lib/dedalo/component_relation_children/html/component_relation_children_search.phtml
@@ -11,8 +11,13 @@
 	print "data-component_info='{$component_info}' ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato='".json_encode($dato)."' ";	
+	
 	print "data-relation_type='{$relation_type}' ";
 	print "data-search_tipos='".json_encode($search_tipos)."' ";
+
+	// service autocomplete options
+	print "data-search_sections='". json_encode($search_sections)."' ";
+	
 	print 'data-search_query_object=\''.$json_search_query_object.'\' ';
 	print "data-limit=\"$limit\" ";
 	print ">";
