--- a/lib/dedalo/component_relation_parent/html/component_relation_parent_search.phtml
+++ b/lib/dedalo/component_relation_parent/html/component_relation_parent_search.phtml
@@ -10,9 +10,13 @@
 	print "data-component_info='{$component_info}' ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato='".json_encode($dato)."' ";	
+	
 	print "data-relation_type=\"".DEDALO_RELATION_TYPE_CHILDREN_TIPO."\" "; // Note that use CHILDREN_TIPO for search only purposes
 	print "data-search_tipos='".json_encode($search_tipos)."' ";
-	print "data-hierarchy_sections='".json_encode($hierarchy_sections)."' ";
+	#print "data-hierarchy_sections='".json_encode($hierarchy_sections)."' ";
+
+	print "data-search_sections='". json_encode($search_sections)."' ";
+	
 	print 'data-search_query_object=\''.$json_search_query_object.'\' ';
 	print "data-limit=\"$limit\" ";
 	print '>';
